--- a/sweetshop/sweetshop/catalog/templates/catalog/cake_list.html
+++ b/sweetshop/sweetshop/catalog/templates/catalog/cake_list.html
@@ -1,12 +1,13 @@
 {% extends "base_generic.html" %}
 
-{% load static %}
+
 
 {% block content %}
 <div class="begin">
     <h1 class="begin__headline">Дессерты</h1>
 </div>
 
+{% load static %}
 <div class="cakes">
     {% if cake_list %}
     <ul class="cakes__list">
@@ -14,12 +15,14 @@
         <li class="cakes__item">
             <a href="{{ cake.get_absolute_url }}" class="cakes__link">
                 <div class="cakes__image-wrap">
-                    <img src="{{ cake.image_id.path }}" alt="{{ cake.image_id.alt }}" class="cakes__image">
+                    <img src="{% get_static_prefix %}{{ cake.image_id.path }}" alt="{{ cake.image_id.alt }}" class="cakes__image">
                 </div>
                 <p class="cakes__text">{{ cake.title }}</p>
-                <p class="cakes__text">{{ cake.weight }}</p>
-                <p class="cakes__text">{{ cake.price }}</p>
-                <button class="cakes__button">Добавить</button>
+                <p class="cakes__text">{{ cake.weight }}г</p>
+                <div class="cakes__bottom-wrap">
+                    <p class="cakes__text">{{ cake.price }}₽</p>
+                    <button class="cakes__button">Добавить</button>
+                </div>
             </a>
         </li>
         {% endfor %}
