--- a/sweetshop/sweetshop/catalog/templates/catalog/cake_list.html
+++ b/sweetshop/sweetshop/catalog/templates/catalog/cake_list.html
@@ -28,7 +28,7 @@
         {% endfor %}
     </ul>
     {% else %}
-    <p>Извините, тортиков пока нет.</p>
+    <p class="reviews__empty">Извините, тортиков пока нет.</p>
     {% endif %}
 </div>
 
