--- a/sweetshop/sweetshop/catalog/static/image/styles.css
+++ b/sweetshop/sweetshop/catalog/static/image/styles.css
@@ -116,8 +116,21 @@ header {
     gap: 30px;
 }
 
+.navigation__item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 1.8rem;
+    color: var(--shadow-color);
+    align-items: center;
+    justify-content: center;
+}
+
 .navigation__link {
     font-size: 2rem;
+    background: none;
+    border: none;
+    color: var(--header-color);
 }
 
 .contact {
@@ -431,7 +444,8 @@ footer {
     align-items: end;
 }
 
-.cake__headline {
+.cake__headline,
+.login__headline {
     color: var(--headline-color);
     font-size: 4rem;
 }
@@ -536,4 +550,63 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+.login {
+    max-width: 1400px;
+    margin: 30px auto 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.login__form {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding: 20px;
+}
+
+.table {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px var(--shadow-color);
+}
+
+.table__label {
+    border-radius: 15px;
+    font-size: 2rem;
+    background-color: var(--background-color);
+    margin: 30px 0 0;
+}
+
+.table__input {
+    font-size: 2rem;
+    background-color: var(--background-color);
+} 
+
+.form__submit {
+    background-color: var(--header-background);
+    color: var(--background-color);
+    font-size: 2.2rem;
+    padding: 12px 22px;
+    border: none;
+    border-radius: 10px;
+}
+
+.form__reg {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.label {
+    margin: 0;
 }
