--- a/sweetshop/sweetshop/catalog/templates/catalog/review_list.html
+++ b/sweetshop/sweetshop/catalog/templates/catalog/review_list.html
@@ -25,7 +25,7 @@
         {% endfor %}
     </ul>
     {% else %}
-    <p>Пока отзывов нет. Вы можете быть первым!</p>
+    <p class="reviews__empty">Пока отзывов нет. Вы можете быть первым!</p>
     {% endif %}
 </div>
 
