--- a/sweetshop/sweetshop/catalog/static/image/styles.css
+++ b/sweetshop/sweetshop/catalog/static/image/styles.css
@@ -57,6 +57,7 @@ table {
     --footer-color: #5e5557;
     --headline-color: #7e0032;
     --shadow-color: #000000;
+    --delete-color: #a50000;
     font-size: 62.5%;
 }
 
@@ -504,10 +505,6 @@ footer {
     background-color: var(--header-color);
     box-shadow: 0 0 3px var(--shadow-color);
     border-radius: 10px;
-}
-
-.reviews__link {
-    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -609,4 +606,16 @@ footer {
 
 .label {
     margin: 0;
+}
+
+.reviews__link {
+    font-size: 2rem;
+    background-color: var(--header-background);
+    color: var(--header-color);
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.delete {
+    background-color: var(--delete-color);
 }
