--- a/sweetshop/sweetshop/catalog/templates/catalog/review_list.html
+++ b/sweetshop/sweetshop/catalog/templates/catalog/review_list.html
@@ -6,21 +6,27 @@
 <div class="reviews">
     <h2 class="reviews__headline">Отзывы</h2>
 
+    <div class="reviews__top">
+        <a href="{% url 'review-create' %}" class="reviews__link">Создать</a>
+    </div>
+
     {% if review_list %}
     <ul class="reviews__list">
         {% for review in review_list %}
         <li class="reviews__item">
-            <a href="{{ review.get_absolute_url }}" class="reviews__link reviews__horyzontal">
-                <div class="reviews__cake-wrap">
-                    <img src="{% get_static_prefix %}{{ review.image_id.path }}" alt="{{ review.image_id.alt }}" class="reviews__image">
-                    <p class="reviews__text">{{ review.cake_id.title }}</p>
-                    <p class="reviews__text">{{ review.created_at }}</p>
-                </div>
-                <div class="reviews__review-wrap">
-                    <p class="reviews__text">{{ review.client_id.last_name }} {{ review.client_id.first_name }}</p>
-                    <p class="reviews__text">{{ review.review }}</p>
-                </div>
-            </a>
+            <div class="reviews__cake-wrap">
+                <img src="{% get_static_prefix %}{{ review.image_id.path }}" alt="{{ review.image_id.alt }}" class="reviews__image">
+                <p class="reviews__text">{{ review.cake_id.title }}</p>
+                <p class="reviews__text">{{ review.created_at }}</p>
+            </div>
+            <div class="reviews__review-wrap">
+                <p class="reviews__text">{{ review.client_id.last_name }} {{ review.client_id.first_name }}</p>
+                <p class="reviews__text">{{ review.review }}</p>
+            </div>
+            <div class="reviews__link-wrap">
+                <a href="{% url 'review-update' review.id %}" class="reviews__link">Редактировать</a>
+                <a href="{% url 'review-delete' review.id %}" class="reviews__link delete">Удалить</a>
+            </div>
         </li>
         {% endfor %}
     </ul>
