Added styles to review forms

--- a/sweetshop/sweetshop/catalog/templates/catalog/cake_detail.html
+++ b/sweetshop/sweetshop/catalog/templates/catalog/cake_detail.html
@@ -23,8 +23,10 @@
     <ul class="reviews__list">
         {% for review in cake.review_set.all %}
         <li class="reviews__item">
-            <p class="reviews__text">{{ review.client_id.last_name }} {{ review.client_id.first_name }}</p>
-            <p class="reviews__text">{{ review.created_at }}</p>
+            <div>
+                <p class="reviews__text">{{ review.client_id.last_name }} {{ review.client_id.first_name }}</p>
+                <p class="reviews__text">{{ review.created_at }}</p>
+            </div>
             <p class="reviews__text">{{ review.review }}</p>
         </li>
         {% endfor %}
