--- a/sweetshop/sweetshop/catalog/templates/catalog/cake_list.html
+++ b/sweetshop/sweetshop/catalog/templates/catalog/cake_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="begin">
-    <h1 class="begin__headline">Дессерты</h1>
+    <h1 class="begin__headline">Десерты</h1>
 </div>
 
 {% load static %}
