--- a/sweetshop/sweetshop/catalog/static/image/styles.css
+++ b/sweetshop/sweetshop/catalog/static/image/styles.css
@@ -47,6 +47,34 @@ table {
 	border-spacing: 0;
 }
 
+tbody {
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    background-color: white;
+    padding: 15px;
+}
+
+tr {
+    width: 100%;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+label {
+    font-size: 2rem;
+}
+
+input,
+select,
+textarea {
+    font-size: 2rem;
+    padding: 0.5rem;
+    width: 350px;
+}
 
 
 :root {
@@ -542,6 +570,11 @@ footer {
     object-fit: cover;
 }
 
+.reviews__item {
+    display: flex;
+    flex-direction: row;
+}
+
 .reviews__cake-wrap,
 .reviews__review-wrap {
     display: flex;
@@ -606,6 +639,10 @@ footer {
 
 .label {
     margin: 0;
+}
+
+.reviews__link-wrap {
+    margin: auto 0 20px;
 }
 
 .reviews__link {
