--- a/sweetshop/sweetshop/catalog/templates/index.html
+++ b/sweetshop/sweetshop/catalog/templates/index.html
@@ -7,7 +7,7 @@
     <div class="start__wrap">
         <h1 class="start__headline">Кондитерская "Brioche"</h1>
         <div class="start__link-wrap">
-            <a href="" class="start__link">Заказать</a>
+            <a href="{% url 'cart_view' %}" class="start__link">Заказать</a>
             <a href="{% url 'cakes' %}" class="start__link">Ассортимент</a>
         </div>
     </div>
