--- a/sweetshop/sweetshop/catalog/templates/catalog/review_list.html
+++ b/sweetshop/sweetshop/catalog/templates/catalog/review_list.html
@@ -20,7 +20,7 @@
                 <p class="reviews__text">{{ review.created_at }}</p>
             </div>
             <div class="reviews__review-wrap">
-                <p class="reviews__text">{{ review.client_id.last_name }} {{ review.client_id.first_name }}</p>
+                <p class="reviews__text">{{ review.user_id.last_name }} {{ review.user_id.first_name }}</p>
                 <p class="reviews__text">{{ review.review }}</p>
             
                 <div class="reviews__link-wrap">
