--- a/sweetshop/sweetshop/catalog/static/image/styles.css
+++ b/sweetshop/sweetshop/catalog/static/image/styles.css
@@ -43,6 +43,7 @@ q:before, q:after {
 	content: none;
 }
 table {
+    background-color: white;
 	border-collapse: collapse;
 	border-spacing: 0;
 }
